# agentic-rag-service

./: .env.example  .gitignore  README.md  install_camelot.py  main.py  pyproject.toml  requirements.txt  start_server.py
app/: __init__.py  main.py
app/agents/: __init__.py  document_agent.py  rag_agent.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  upload.py
app/chains/: __init__.py  retrieval_chain.py
app/config/: langgraph_config.py  settings.py
app/core/: query_processor.py  result_ranker.py  retry_handler.py  startup.py
app/core/document/: parser.py  pdf_extractor.py  text_chunker.py
app/core/embeddings/: __init__.py  bge3_generator.py
app/core/memory/: chat_memory.py
app/core/vector_store/: postgresql_store.py  store_manager.py
app/graphs/: __init__.py  rag_workflow.py
app/models/: chat.py  document.py  embedding.py  query.py
